--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,12 +6,12 @@
 #    By: lhojoon <lhojoon@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/18 14:31:50 by lhojoon           #+#    #+#              #
-#    Updated: 2024/03/16 21:12:39 by lhojoon          ###   ########.fr        #
+#    Updated: 2024/03/17 22:21:00 by lhojoon          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = philo
-CC = cc
+CC = gcc
 CFLAGS = -Wall -Wextra -Werror
 
 DIR = srcs
@@ -20,7 +20,9 @@ SRCS_RAW =	main.c \
 			init_values.c \
 			execute.c \
 			utils.c \
-			execute_2.c
+			execute_2.c \
+			init_values_2.c \
+			execute_3.c
 SRCS = $(addprefix $(DIR)/,$(SRCS_RAW))
 OBJS = $(SRCS:c=o)
 INCLUDES = -I./includes
