--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,13 +6,14 @@
 #    By: lhojoon <lhojoon@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/18 14:31:50 by lhojoon           #+#    #+#              #
-#    Updated: 2024/03/17 23:57:40 by lhojoon          ###   ########.fr        #
+#    Updated: 2024/04/22 14:53:46 by lhojoon          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = philo
-CC = gcc
+CC = cc
 CFLAGS = -Wall -Wextra -Werror
+# DEBUG = -g3
 
 DIR = srcs
 SRCS_RAW =	main.c \
