--- a/philo/Makefile
+++ b/philo/Makefile
@@ -6,7 +6,7 @@
 #    By: lhojoon <lhojoon@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/12/18 14:31:50 by lhojoon           #+#    #+#              #
-#    Updated: 2024/05/17 19:46:34 by lhojoon          ###   ########.fr        #
+#    Updated: 2024/05/20 18:33:10 by lhojoon          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -24,7 +24,8 @@ SRCS_RAW =	main.c \
 			execute_2.c \
 			init_values_2.c \
 			execute_3.c \
-			free_philo.c
+			free_philo.c \
+			verify_input.c
 SRCS = $(addprefix $(DIR)/,$(SRCS_RAW))
 OBJS = $(SRCS:c=o)
 INCLUDES = -I./includes
